UserController, UserRepository, UserService and UserServiceImpl are updated.